# openglConfiguration

./: CMakeLists.txt
include/: demoShader.h  openglDebug.h
resources/: fragment.frag  vertex.vert
src/: demoShader.cpp  demoShaderLoader.cpp  main.cpp  openglDebug.cpp
